modal z-index fix

--- a/page.css
+++ b/page.css
@@ -109,7 +109,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 60;
   background-color: rgba(128, 128, 128, 0.5);
   transition: opacity 0.3s ease-in-out;
 }
